--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -18,14 +18,10 @@
 }
 
 body {
-  background-color: var(--white);
-  background-image: 
-    radial-gradient(var(--saffron) 3px, transparent 3px),
-    radial-gradient(var(--green) 3px, transparent 3px);
-  background-size: 50px 50px;
-  background-position: 0 0, 25px 25px;
-  font-family: 'Arial', sans-serif;
+  background-color: var(--background);
 }
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
